Trying to collapse left sidebar (pending to fix), adding a simplified hover for sidebar / Changing navigation list for phone view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -196,6 +196,33 @@
  }
  /*sidebar */
 
+ /*? Expand button */
+
+/* .expand-btn {
+     position: absolute;
+     display: grid;
+     place-items: center;
+     cursor: pointer;
+     right: -50px;
+     border: 1px solid var(--font-color);
+     background-color: var(--normal-orange-color);
+     z-index: 2;
+     width: 32px;
+     height: 32px;
+     border-radius: 8px;
+ }*/
+
+/* .expand-btn svg {
+     transform: rotate(-180deg);
+     stroke: var(--font-color);
+     width: 20px;
+     height: 20px;
+ }*/
+
+/* body.collapsed .expand-btn svg {
+     transform: rotate(-360deg);
+ }*/
+
  .dashboard {
      display: flex;
      position: fixed;
@@ -204,93 +231,58 @@
      height: 100%;
      width: 100%;
  }
- 
+
+ .collapsed .sidebar {
+     width: 18rem; /* Collapsed width */
+     display: flex;
+     align-items: center;
+ }
+
+ .collapsed .hide {
+     position: absolute;
+ }
+
+ .collapsed .sidebar-item {
+     display: flex;
+     justify-content: flex-start;
+ }
+
+ .collapsed .sidebar-items {
+     margin-left: -80px;
+
+ }
+
+ .collapsed .icon-name {
+     display: inline-block;
+     margin-left: 10px; /* Set the left margin for the names */
+ }
  .sidebar {
      flex-direction: column;
      background-color: var(--primary-background-color);
      height: 100%;
+     transition: width 0.3s ease;
+     overflow-x: hidden;
      /*padding: 0 0.5rem;*/
+     max-width: 18rem;
+ }
+
+ .icon-name {
+     display: none;
  }
 
  .sidebar-item {
      padding: 0.3rem;
-     margin: 4rem 1rem;
+     margin: 4rem 1.4rem;
      border-radius: 50%;
      transition: .3s;
  }
- .s-item-profile img {
-     border-radius: 50%;
-     width: 50px;
-     height: 50px;
- }
- .s-item-home {
-     background-color: var(--normal-orange-color);
- }
- .s-item-home a:hover {
-     background-color: var(--normal-orange-color);
- }
-     .s-item-home a {
-         display: block;
-         width: 50px;
-         height: 50px;
-         border-radius: 50%;
-         text-align: center;
-         line-height: 50px;
-         transition: .3s;
-     }
 
- .s-item-1:hover {
-     background-color: var(--red-color);
- }
- .s-item-1 a {
-     display: block;
-     width: 50px;
-     height: 50px;
-     border-radius: 50%;
-     text-align: center;
-     line-height: 50px;
-     transition: .3s;
+ .sidebar-item a.hov:hover i,
+ .sidebar-item a.hov:hover span {
+     color: var(--dark-orange-color);
  }
 
- .s-item-2:hover {
-     background-color: var(--light-purple-color);
- }
-     .s-item-2 a {
-         display: block;
-         width: 50px;
-         height: 50px;
-         border-radius: 50%;
-         text-align: center;
-         line-height: 50px;
-         transition: .3s;
-     }
- 
- .s-item-3:hover {
-     background-color: var(--red-color);
- }
-     .s-item-3 a {
-         display: block;
-         width: 50px;
-         height: 50px;
-         border-radius: 50%;
-         text-align: center;
-         line-height: 50px;
-         transition: .3s;
-     }
 
- .s-item-4:hover {
-     background-color: var(--normal-orange-color);
- }
-     .s-item-4 a {
-         display: block;
-         width: 50px;
-         height: 50px;
-         border-radius: 50%;
-         text-align: center;
-         line-height: 50px;
-         transition: .3s;
-     }
- 
  .logo {
      position: absolute;
      top: 4rem;
@@ -318,44 +310,12 @@
      padding: var(--padding-lg);
  }
  /* main */
-
- /* Pages */
  .nav-list {
-     position: relative;
-     display: flex;
-     justify-content: center;
-     list-style-type: none;
-     padding: var(--padding-lg);
-     text-align: center;
-     border-radius: 2rem;
-
+     display: none;
+     /* Add any other default styles */
  }
-
- .nav-item {
-     flex: 0.1;
- }
-
- .nav-link {
-     display: block;
-     padding: 1rem;
-     color: var(--font-color);
-     background-color: var(--primary-background-color);
-     text-decoration: none;
- }
-
- .nav-link:hover {
-     color: var(--font-color);
-     background-color: var(--secondary-background-color);
- }
-
- .nav-link.active {
-     color: #1a202c;
-     background-color: #f7fafc;
- }
-
- .nav-item:last-child .nav-link {
-     border-right: none;
- }
+ /*!* Pages *!
+ */
 
  .open-menu-icon {
      font-size: var(--font-size-lg);
@@ -484,6 +444,10 @@
  .progress-title {
      margin-bottom: 2rem;
  }
+
+ .title {
+     margin-bottom: 2rem;
+ }
  
  .progress-icon {
      padding: 1.2rem;
@@ -592,5 +556,39 @@
      }
      h1 {
          font-size: var(--font-size-lg);
+     }
+     .title {
+         text-align: center;
+     }
+     .nav-list {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         padding-bottom: var(--padding-sm);
+         text-align: center;
+     }
+     .align-icon {
+         margin-left: 1rem;
+     }
+     .nav-link {
+         display: block;
+         padding: 1rem;
+         color: var(--font-color);
+         background-color: var(--primary-background-color);
+         text-decoration: none;
+     }
+
+     .nav-link:hover {
+         color: var(--font-color);
+         background-color: var(--secondary-background-color);
+     }
+
+     .nav-link.active {
+         color: var(--font-color);
+         background-color: #f7fafc;
+     }
+
+     .nav-item:last-child .nav-link {
+         border-right: none;
      }
  }
